Update for Crystal 1.0.0 and fix issues present in the parser

--- a/shard.yml
+++ b/shard.yml
@@ -3,7 +3,8 @@ version: 0.1.0
 
 authors:
   - Chris Watson <chris@watzon.me>
+  - Giorgi Kavrelishvili <griogi.kavrelishvili@pm.me>
 
-crystal: 0.29.0
+crystal: ">= 0.36.0"
 
 license: MIT
